<resources>
    <string name="msg">Please enable all permissions</string>
    <string name="app_name">Test</string>
    <string name="change">change</string>
    <string name="refresh">refresh</string>
    <string name="name">name</string>
    <string name="message">message</string>
    <string name="upload">upload</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="donot_have_an_account">Do not have an account?</string>
    <string name="skip">skip</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="back">back</string>
    <string name="regiser">Regiser</string>
    <string name="upload_image">Upload image</string>
    <string name="blue">blue_name</string>
    <string name="texttransform">texttransform</string>
    <string name="email_example_com">email@example.com</string>
    <string name="enquiry_message">Enquiry message</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="send">Send</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip2">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="menu">Menu</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_hot_deals">Hot deals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="hot_deals_fragment">Hot Deals Fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
