<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="com.jobin.test.Register">

    <!-- Login progress -->

    <Button
        android:id="@+id/upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        android:layout_marginRight="52dp"
        android:layout_marginLeft="52dp"


        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp" />

    <TextView
        android:textColor="#13b4af"
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <Button

        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regiser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="142dp"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/username"
        android:layout_width="275dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.303"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />
</android.support.constraint.ConstraintLayout>
