<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jobin.test.MainActivity"
    >


  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:hint="@string/name"
      android:ems="10"
      android:id="@+id/editText2"
      app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.147"
      app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
  <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:hint="@string/message"
    android:ems="10"
    android:id="@+id/editText"
    app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
      android:layout_marginTop="32dp"
      app:layout_constraintVertical_bias="0.0"
      app:layout_constraintTop_toBottomOf="@+id/editText2"/>
  <Button
    android:text="@string/upload"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:id="@+id/buttonUpload"
    android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
    android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
      app:layout_constraintTop_toBottomOf="@+id/editText"
      app:layout_constraintVertical_bias="0.125"/>
</android.support.constraint.ConstraintLayout>
